// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> renders a different tab after click 1`] = `
Array [
  .emotion-4 {
  box-shadow: 0 4px 6px rgba(50,50,93,.11),0 1px 3px rgba(0,0,0,.08);
  display: inline-block;
}

.emotion-4 .emotion-1 {
  box-shadow: none;
}

.emotion-4 .emotion-1 + .emotion-1 {
  border-left-width: 0;
  border-left: 1px solid #F1F1F1;
}

.emotion-4 .emotion-1:not(:last-child):not(:first-of-type) {
  border-radius: 0;
}

.emotion-4 .emotion-1:first-of-type {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-4 .emotion-1:last-child {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.emotion-0 {
  overflow: visible;
  display: inline-block;
  font-family: 'Open Sans',Arial,sans-serif;
  font-weight: 600;
  -webkit-letter-spacing: 0.35px;
  -moz-letter-spacing: 0.35px;
  -ms-letter-spacing: 0.35px;
  letter-spacing: 0.35px;
  box-shadow: 0 4px 6px rgba(50,50,93,.11),0 1px 3px rgba(0,0,0,.08);
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid transparent;
  padding: .5rem 1.25rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
  --text: #566ad2;
  --text-active: #333;
  --bg: transparent;
  --bg-active: transparent;
  --bg-disabled: transparent;
}

.emotion-0:focus,
.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus,
.emotion-0.focused {
  outline: 0;
  box-shadow: 0 0 0 .2rem rgba(0,123,255,.25);
}

.emotion-0:disabled,
.emotion-0.disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.emotion-0:not(:disabled):not(.disabled) {
  cursor: pointer;
}

.emotion-0 svg {
  height: 1rem;
  width: 1rem;
}

.emotion-0.-default,
.emotion-0.-primary,
.emotion-0.-danger,
.emotion-0.-white {
  color: var(--text);
  background-color: var(--bg);
  border-color: var(--bg);
}

.emotion-0.-default.-outline,
.emotion-0.-primary.-outline,
.emotion-0.-danger.-outline,
.emotion-0.-white.-outline {
  border-color: var(--outline,var(--bg));
  color: var(--outline-text,var(--bg));
}

.emotion-0.-default.-text,
.emotion-0.-primary.-text,
.emotion-0.-danger.-text,
.emotion-0.-white.-text {
  color: var(--text-text,var(--bg));
}

.emotion-0.-default:hover,
.emotion-0.-primary:hover,
.emotion-0.-danger:hover,
.emotion-0.-white:hover,
.emotion-0.-default.active,
.emotion-0.-primary.active,
.emotion-0.-danger.active,
.emotion-0.-white.active {
  background-color: var(--bg-active);
  border-color: var(--bg-active);
  color: var(--text-active);
}

.emotion-0.-default:hover.-outline,
.emotion-0.-primary:hover.-outline,
.emotion-0.-danger:hover.-outline,
.emotion-0.-white:hover.-outline,
.emotion-0.-default.active.-outline,
.emotion-0.-primary.active.-outline,
.emotion-0.-danger.active.-outline,
.emotion-0.-white.active.-outline {
  background-color: var(--bg) !important;
  border: 1px solid var(--bg);
  color: var(--outline-text-active,var(--text));
}

.emotion-0.-default:hover.-text,
.emotion-0.-primary:hover.-text,
.emotion-0.-danger:hover.-text,
.emotion-0.-white:hover.-text,
.emotion-0.-default.active.-text,
.emotion-0.-primary.active.-text,
.emotion-0.-danger.active.-text,
.emotion-0.-white.active.-text {
  color: var(--text-text-active,var(--bg-active));
}

.emotion-0.-default:disabled,
.emotion-0.-primary:disabled,
.emotion-0.-danger:disabled,
.emotion-0.-white:disabled,
.emotion-0.-default.disabled,
.emotion-0.-primary.disabled,
.emotion-0.-danger.disabled,
.emotion-0.-white.disabled {
  background-color: var(--bg-disabled);
  border-color: var(--bg-disabled);
  color: var(--text);
}

.emotion-0.-default:disabled.-outline,
.emotion-0.-primary:disabled.-outline,
.emotion-0.-danger:disabled.-outline,
.emotion-0.-white:disabled.-outline,
.emotion-0.-default.disabled.-outline,
.emotion-0.-primary.disabled.-outline,
.emotion-0.-danger.disabled.-outline,
.emotion-0.-white.disabled.-outline {
  border: 1px solid var(--outline-disabled,var(--outline-text-disabled,var(--bg-disabled)));
  color: var(--outline-text-disabled,var(--bg-disabled));
}

.emotion-0.-default:disabled.-text,
.emotion-0.-primary:disabled.-text,
.emotion-0.-danger:disabled.-text,
.emotion-0.-white:disabled.-text,
.emotion-0.-default.disabled.-text,
.emotion-0.-primary.disabled.-text,
.emotion-0.-danger.disabled.-text,
.emotion-0.-white.disabled.-text {
  color: var(--text-text-disabled,var(--bg-disabled));
}

.emotion-0.-primary {
  --text: #FFF;
  --text-active: #FFF;
  --outline-disabled: #C2C2C2;
  --bg: #566ad2;
  --bg-active: rgb(70,90,197);
  --bg-disabled: rgb(114,131,211);
}

.emotion-0.-danger {
  --text: #FFF;
  --text-active: #FFF;
  --outline-disabled: #C2C2C2;
  --bg: #f5365c;
  --bg-active: rgb(233,37,76);
  --bg-disabled: rgb(249,139,161);
}

.emotion-0.-default {
  --text: #333;
  --text-active: #333;
  --outline: #333;
  --outline-text: #333;
  --outline-text-active: #333;
  --outline-text-disabled: #C2C2C2;
  --text-text: #333;
  --text-text-active: #333;
  --text-text-disabled: #C2C2C2;
  --bg: #FFF;
  --bg-active: #FDFDFD;
  --bg-disabled: #F1F1F1;
}

.emotion-0.-white {
  --text: #566ad2;
  --text-active: #333;
  --outline: #FFF;
  --outline-text: #FFF;
  --outline-text-active: #566ad2;
  --outline-text-disabled: #C2C2C2;
  --text-text: #FFF;
  --text-text-active: #FFF;
  --text-text-disabled: #C2C2C2;
  --bg: #FFF;
  --bg-active: #FDFDFD;
  --bg-disabled: #F1F1F1;
}

.emotion-0.-text {
  background-color: transparent !important;
  border: 1px solid transparent;
  box-shadow: none;
}

.emotion-0.-text:hover,
.emotion-0.-text.active {
  border-color: transparent;
}

.emotion-0.-text.disabled,
.emotion-0.-text:disabled {
  border: 1px solid transparent;
}

.emotion-0.-outline {
  background-color: transparent !important;
  border: 1px solid inherit;
  box-shadow: none;
}

.emotion-0.disabled,
.emotion-0:disabled {
  cursor: not-allowed;
}

<div>
    <div
      className="emotion-4 emotion-5"
    >
      <button
        className="-default emotion-0 emotion-1"
        onClick={[Function]}
        title="Switch to Table View"
        type="button"
      >
        <span
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
           
          Table
        </span>
      </button>
      <button
        className="-primary emotion-0 emotion-1"
        onClick={[Function]}
        title="Switch to Chart View"
        type="button"
      >
        <span
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
           
          Charts
        </span>
      </button>
    </div>
  </div>,
  "Chart content",
]
`;

exports[`<Tabs /> renders a set of tabs 1`] = `
Array [
  .emotion-4 {
  box-shadow: 0 4px 6px rgba(50,50,93,.11),0 1px 3px rgba(0,0,0,.08);
  display: inline-block;
}

.emotion-4 .emotion-1 {
  box-shadow: none;
}

.emotion-4 .emotion-1 + .emotion-1 {
  border-left-width: 0;
  border-left: 1px solid #F1F1F1;
}

.emotion-4 .emotion-1:not(:last-child):not(:first-of-type) {
  border-radius: 0;
}

.emotion-4 .emotion-1:first-of-type {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-4 .emotion-1:last-child {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.emotion-0 {
  overflow: visible;
  display: inline-block;
  font-family: 'Open Sans',Arial,sans-serif;
  font-weight: 600;
  -webkit-letter-spacing: 0.35px;
  -moz-letter-spacing: 0.35px;
  -ms-letter-spacing: 0.35px;
  letter-spacing: 0.35px;
  box-shadow: 0 4px 6px rgba(50,50,93,.11),0 1px 3px rgba(0,0,0,.08);
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid transparent;
  padding: .5rem 1.25rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
  --text: #566ad2;
  --text-active: #333;
  --bg: transparent;
  --bg-active: transparent;
  --bg-disabled: transparent;
}

.emotion-0:focus,
.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus,
.emotion-0.focused {
  outline: 0;
  box-shadow: 0 0 0 .2rem rgba(0,123,255,.25);
}

.emotion-0:disabled,
.emotion-0.disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.emotion-0:not(:disabled):not(.disabled) {
  cursor: pointer;
}

.emotion-0 svg {
  height: 1rem;
  width: 1rem;
}

.emotion-0.-default,
.emotion-0.-primary,
.emotion-0.-danger,
.emotion-0.-white {
  color: var(--text);
  background-color: var(--bg);
  border-color: var(--bg);
}

.emotion-0.-default.-outline,
.emotion-0.-primary.-outline,
.emotion-0.-danger.-outline,
.emotion-0.-white.-outline {
  border-color: var(--outline,var(--bg));
  color: var(--outline-text,var(--bg));
}

.emotion-0.-default.-text,
.emotion-0.-primary.-text,
.emotion-0.-danger.-text,
.emotion-0.-white.-text {
  color: var(--text-text,var(--bg));
}

.emotion-0.-default:hover,
.emotion-0.-primary:hover,
.emotion-0.-danger:hover,
.emotion-0.-white:hover,
.emotion-0.-default.active,
.emotion-0.-primary.active,
.emotion-0.-danger.active,
.emotion-0.-white.active {
  background-color: var(--bg-active);
  border-color: var(--bg-active);
  color: var(--text-active);
}

.emotion-0.-default:hover.-outline,
.emotion-0.-primary:hover.-outline,
.emotion-0.-danger:hover.-outline,
.emotion-0.-white:hover.-outline,
.emotion-0.-default.active.-outline,
.emotion-0.-primary.active.-outline,
.emotion-0.-danger.active.-outline,
.emotion-0.-white.active.-outline {
  background-color: var(--bg) !important;
  border: 1px solid var(--bg);
  color: var(--outline-text-active,var(--text));
}

.emotion-0.-default:hover.-text,
.emotion-0.-primary:hover.-text,
.emotion-0.-danger:hover.-text,
.emotion-0.-white:hover.-text,
.emotion-0.-default.active.-text,
.emotion-0.-primary.active.-text,
.emotion-0.-danger.active.-text,
.emotion-0.-white.active.-text {
  color: var(--text-text-active,var(--bg-active));
}

.emotion-0.-default:disabled,
.emotion-0.-primary:disabled,
.emotion-0.-danger:disabled,
.emotion-0.-white:disabled,
.emotion-0.-default.disabled,
.emotion-0.-primary.disabled,
.emotion-0.-danger.disabled,
.emotion-0.-white.disabled {
  background-color: var(--bg-disabled);
  border-color: var(--bg-disabled);
  color: var(--text);
}

.emotion-0.-default:disabled.-outline,
.emotion-0.-primary:disabled.-outline,
.emotion-0.-danger:disabled.-outline,
.emotion-0.-white:disabled.-outline,
.emotion-0.-default.disabled.-outline,
.emotion-0.-primary.disabled.-outline,
.emotion-0.-danger.disabled.-outline,
.emotion-0.-white.disabled.-outline {
  border: 1px solid var(--outline-disabled,var(--outline-text-disabled,var(--bg-disabled)));
  color: var(--outline-text-disabled,var(--bg-disabled));
}

.emotion-0.-default:disabled.-text,
.emotion-0.-primary:disabled.-text,
.emotion-0.-danger:disabled.-text,
.emotion-0.-white:disabled.-text,
.emotion-0.-default.disabled.-text,
.emotion-0.-primary.disabled.-text,
.emotion-0.-danger.disabled.-text,
.emotion-0.-white.disabled.-text {
  color: var(--text-text-disabled,var(--bg-disabled));
}

.emotion-0.-primary {
  --text: #FFF;
  --text-active: #FFF;
  --outline-disabled: #C2C2C2;
  --bg: #566ad2;
  --bg-active: rgb(70,90,197);
  --bg-disabled: rgb(114,131,211);
}

.emotion-0.-danger {
  --text: #FFF;
  --text-active: #FFF;
  --outline-disabled: #C2C2C2;
  --bg: #f5365c;
  --bg-active: rgb(233,37,76);
  --bg-disabled: rgb(249,139,161);
}

.emotion-0.-default {
  --text: #333;
  --text-active: #333;
  --outline: #333;
  --outline-text: #333;
  --outline-text-active: #333;
  --outline-text-disabled: #C2C2C2;
  --text-text: #333;
  --text-text-active: #333;
  --text-text-disabled: #C2C2C2;
  --bg: #FFF;
  --bg-active: #FDFDFD;
  --bg-disabled: #F1F1F1;
}

.emotion-0.-white {
  --text: #566ad2;
  --text-active: #333;
  --outline: #FFF;
  --outline-text: #FFF;
  --outline-text-active: #566ad2;
  --outline-text-disabled: #C2C2C2;
  --text-text: #FFF;
  --text-text-active: #FFF;
  --text-text-disabled: #C2C2C2;
  --bg: #FFF;
  --bg-active: #FDFDFD;
  --bg-disabled: #F1F1F1;
}

.emotion-0.-text {
  background-color: transparent !important;
  border: 1px solid transparent;
  box-shadow: none;
}

.emotion-0.-text:hover,
.emotion-0.-text.active {
  border-color: transparent;
}

.emotion-0.-text.disabled,
.emotion-0.-text:disabled {
  border: 1px solid transparent;
}

.emotion-0.-outline {
  background-color: transparent !important;
  border: 1px solid inherit;
  box-shadow: none;
}

.emotion-0.disabled,
.emotion-0:disabled {
  cursor: not-allowed;
}

<div>
    <div
      className="emotion-4 emotion-5"
    >
      <button
        className="-primary emotion-0 emotion-1"
        onClick={[Function]}
        title="Switch to Table View"
        type="button"
      >
        <span
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
           
          Table
        </span>
      </button>
      <button
        className="-default emotion-0 emotion-1"
        onClick={[Function]}
        title="Switch to Chart View"
        type="button"
      >
        <span
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
           
          Charts
        </span>
      </button>
    </div>
  </div>,
  "Table content",
]
`;
